<resources>
    <string name="app_name">Task Scheduler</string>
    <string name="email">Введите ваш email:</string>
    <string name="password">Введите пароль:</string>
    <string name="sign_in">Войти</string>
    <string name="save">Сохранить</string>
    <string name="forgot_password">Забыли пароль</string>
    <string name="register">Регистрация</string>
    <string name="forgot_password_fragment">Забыли пароль?</string>
    <string name="email_forgot">Введите email:</string>
    <string name="reset_password">Сбросить пароль</string>
    <string name="registration">Регистрация</string>
    <string name="name">Имя</string>
    <string name="password_registration">Пароль</string>
    <string name="email_registration">Email</string>
    <string name="registration_reg">Зарегистрироваться</string>
    <string name="logout">Выйти из аккаунта</string>
    <string name="last_name">Фамилия</string>
    <string name="invite">Пригласить</string>
    <string name="choose">Выбрать</string>
    <string name="name_board_edit">Введите название доски:</string>
    <string name="choose_background">Выберите фон</string>
    <string name="add_avatar">Добавить аватар пользователя</string>
    <string name="welcome_user">Добро пожаловать, %1$s %2$s \nВаши доски</string>
    <string name="add_note">+ Добавить заметку</string>
    <string name="add_new_list">+ Добавить новый список</string>
    <string name="add_list_title">Введите название списка</string>
    <string name="save_button_new_list">Сохранить</string>
    <string name="note_in_list">в списке %s</string>
    <string name="invite_from">Приглашение от %s</string>
    <string name="to_board">На доску %s</string>
    <string name="loading_text">Загрузка, пожалуйста подождите</string>
    <string name="change_user_avatar">Сменить фото профиля</string>
    <string name="logout_profile">Выйти</string>
    <string name="full_name">%1$s %2$s</string>
    <string name="welcome">Добро пожаловать,\n %s</string>
    <string name="check_percent">%d %s</string>
    <string name="move_to_another_list">Переместить в другой список</string>
    <string name="delete_note">Удалить заметку</string>
    <string name="change_list_name">Переименовать список</string>
    <string name="delete_list">Удалить список</string>
    <string name="delete_board">Удалить доску</string>
    <string name="change_priority">Изменить приоритет заметки</string>
    <string name="select_note_title">Введите название</string>
    <string name="description_note">Описание</string>
    <string name="select_note_description">Введите описание заметки</string>
    <string name="check_list">Список задач</string>
    <string name="deadline">Крайний срок</string>
    <string name="note_title">Название</string>
    <string name="add_item">Добавить элемент</string>
    <string name="name_name">item</string>
    <string name="add">Добавить</string>
    <string name="tell_about_yourself">Расскажите о себе</string>
    <string name="email_profile">Электронный адрес</string>
    <string name="change_board_parameters">Изменить параметры доски</string>
    <string name="date" translatable="false">%1$s.%2$s.%3$d</string>
    <string name="forgot_password_email_send_letter">"На ваш электронный адрес было отправлено письмо с ссылкой для восстановления пароля"</string>
    <string name="fill_in_login_parameters">"Заполните все поля!"</string>
    <string name="user_registration_success">Регистрация пользователя %1$s %2$s прошла успешно!</string>
    <string name="choose_the_list">Выберите список для перемещения</string>
    <string name="select_check_list_title">Введите название элемента</string>
    <string name="choose_note_priority">Выберите приоритет заметки</string>
    <string name="fill_in_title_field">Заполните поле названия и выберите фоновое изображение!</string>
    <string name="accept_invite">Принять приглашение?</string>
    <string name="to_accept">Принять</string>
    <string name="to_decline">Отклонить</string>
    <string name="success_invite">Приглашение успешно отправлено!</string>
    <string name="cannot_enter_an_empty_name">Нельзя задать пустое название!</string>
    <string name="from_where_pick_photo">Откуда возьмем фото?</string>
    <string name="gallery">Галлерея</string>
    <string name="camera">Камера</string>
    <string name="cancel">Отменить</string>
    <string name="fill_in_the_input_field">Заполните поле ввода!</string>
    <string name="new_item">Новая задача</string>
</resources>