<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        tools:context="com.example.taskscheduler.presentation.newnote.NewNoteFragment"
        android:layout_width="match_parent"
        android:layout_height="0dp">

        <androidx.cardview.widget.CardView
            android:id="@+id/newNoteCard"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:cardCornerRadius="5dp"
            app:cardUseCompatPadding="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/textViewTitle"
            app:layout_constraintTop_toBottomOf="@id/textViewTitle">

            <EditText
                android:id="@+id/newNoteTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:hint="@string/select_note_title"
                android:minHeight="48dp"
                android:padding="4dp"
                android:textColor="@color/black"
                android:textSize="24sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textViewNewNoteTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:padding="8dp"
                android:text="@string/name"
                android:textColor="@color/black"
                android:textSize="24sp"
                android:visibility="gone" />
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/textInList"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/note_in_list"
            android:textColor="@color/purple_500"
            android:paddingHorizontal="8dp"
            app:layout_constraintStart_toStartOf="@id/newNoteCard"
            app:layout_constraintTop_toBottomOf="@id/newNoteCard"/>

        <TextView
            android:id="@+id/textDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:layout_marginTop="4dp"
            android:padding="4dp"
            android:text="@string/description_note"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintStart_toEndOf="@+id/imageViewDescription"
            app:layout_constraintTop_toBottomOf="@id/textInList" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cardNewNoteDescription"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="4dp"
            app:cardCornerRadius="5dp"
            app:cardUseCompatPadding="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/newNoteCard"
            app:layout_constraintTop_toBottomOf="@id/textDescription">

            <TextView
                android:id="@+id/textViewDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:ems="10"
                android:gravity="start|top"
                android:padding="4dp"
                android:text=""
                android:textColor="@color/black"
                android:textSize="16sp"
                android:visibility="gone" />

            <EditText
                android:id="@+id/editTextDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:ems="10"
                android:gravity="start|top"
                android:hint="@string/select_note_description"
                android:inputType="textMultiLine"
                android:minHeight="48dp"
                android:padding="4dp"
                android:textColor="@color/black"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.cardview.widget.CardView>


        <TextView
            android:id="@+id/textViewCheckList"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:padding="4dp"
            android:text="@string/check_list"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintStart_toEndOf="@+id/imageViewChecklist"
            app:layout_constraintTop_toBottomOf="@+id/textViewDate" />

        <TextView
            android:id="@+id/textViewDeadLine"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:padding="4dp"
            android:text="@string/deadline"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintStart_toEndOf="@+id/imageViewDeadline"
            app:layout_constraintTop_toBottomOf="@id/cardNewNoteDescription" />

        <TextView
            android:id="@+id/textViewTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:layout_marginTop="8dp"
            android:padding="4dp"
            android:text="@string/note_title"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintStart_toEndOf="@+id/imageView"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/buttonNewNote"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:text="@string/save"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/buttonAddCheckListItem" />

        <ImageView
            android:id="@+id/imageViewDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:src="@drawable/my_baseline_notes_24"
            app:layout_constraintBottom_toBottomOf="@+id/textDescription"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/textDescription" />

        <ImageView
            android:id="@+id/imageViewChecklist"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:src="@drawable/my_baseline_checklist_24"
            app:layout_constraintBottom_toBottomOf="@+id/textViewCheckList"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/textViewCheckList" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:src="@drawable/my_baseline_title_24"
            app:layout_constraintBottom_toBottomOf="@+id/textViewTitle"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/textViewTitle" />

        <ImageView
            android:id="@+id/imageViewEditDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:layout_marginStart="4dp"
            android:src="@drawable/my_baseline_edit_24"
            app:layout_constraintBottom_toBottomOf="@+id/textDescription"
            app:layout_constraintStart_toEndOf="@+id/textDescription"
            app:layout_constraintTop_toBottomOf="@+id/textInList" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerViewCheckList"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/imageViewChecklist"
            app:layout_constraintTop_toBottomOf="@+id/progressBar" />

        <Button
            android:id="@+id/buttonAddCheckListItem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/add_item"
            android:textSize="11sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/recyclerViewCheckList" />

        <EditText
            android:id="@+id/editTextCheckTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="8dp"
            android:ems="10"
            android:text="@string/name_name"
            android:visibility="gone"
            app:layout_constraintStart_toStartOf="@+id/buttonAddCheckListItem"
            app:layout_constraintTop_toTopOf="@+id/buttonAddCheckListItem" />

        <Button
            android:id="@+id/buttonAddItemToCheckList"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add"
            android:textSize="11sp"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="@+id/editTextCheckTitle"
            app:layout_constraintStart_toStartOf="@+id/buttonAddCheckListItem"
            app:layout_constraintTop_toBottomOf="@+id/editTextCheckTitle" />

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/textViewCheckPercent"
            app:layout_constraintTop_toBottomOf="@+id/textViewCheckList" />

        <TextView
            android:id="@+id/textViewCheckPercent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:visibility="gone"
            android:text="@string/check_percent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewCheckList"
            app:layout_constraintEnd_toStartOf="@id/progressBar"/>

        <ImageView
            android:id="@+id/imageViewCalendarEdit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="@+id/textViewDate"
            app:layout_constraintStart_toEndOf="@+id/textViewDate"
            app:layout_constraintTop_toBottomOf="@+id/textViewDeadLine"
            app:srcCompat="@drawable/my_baseline_edit_calendar_24" />

        <CalendarView
            android:id="@+id/calendarView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:selectedWeekBackgroundColor="#ff0000"
            android:weekNumberColor="#0000ff"
            android:weekSeparatorLineColor="#00ff00"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewDate" />

        <ImageView
            android:id="@+id/imageViewDeadline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            app:layout_constraintBottom_toBottomOf="@+id/textViewDeadLine"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/textViewDeadLine"
            app:srcCompat="@drawable/my_baseline_calendar_month_24" />

        <TextView
            android:id="@+id/textViewDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:textSize="20sp"
            android:text=""
            android:layout_margin="4dp"
            android:padding="4dp"
            app:layout_constraintStart_toEndOf="@+id/imageViewDeadline"
            app:layout_constraintTop_toBottomOf="@+id/textViewDeadLine" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
